# xbuoy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NDBC.ipynb  README.md  compare_glorys_and_buos.ipynb  download_ssh_from_cmems_daily.ipynb  environment.yml  movies.ipynb  pyproject.toml  save_NDBC_subset.ipynb  src.py  station_table.txt
.github/workflows/: tests.yml
.ipynb_checkpoints/: NDBC-checkpoint.ipynb  compare_glorys_and_buos-checkpoint.ipynb  compare_glorys_and_buoys_daily-checkpoint.ipynb  movies-Copy1-checkpoint.ipynb  movies-checkpoint.ipynb  save_NDBC_subset-checkpoint.ipynb  src-checkpoint.py
analysis/: download_ssh_from_cmems.ipynb
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/: Untitled.ipynb  buoy_temperature_anomaly_animation.ipynb  buoy_temperature_anomaly_gap_filling.ipynb  buoy_temperature_trend.ipynb  california_buoys_example.ipynb  get_realtime_data.ipynb  getting_started.ipynb  save_NDBC_global.ipynb  save_NDBC_subset.ipynb
examples/.ipynb_checkpoints/: buoy_temperature_anomaly_animation-checkpoint.ipynb  buoy_temperature_anomaly_gap_filling-checkpoint.ipynb  buoy_temperature_trend-checkpoint.ipynb  get_realtime_data-checkpoint.ipynb  save_NDBC_subset-checkpoint.ipynb
examples/interpolation_tutorials/: GPR_math.ipynb  GaussianProcessRegression.ipynb  SpatialGPR.ipynb  SyntheticBuoyGPR.ipynb  SyntheticBuoyGPRLagged.ipynb  SyntheticBuoyGPRMaternIsotropic-Copy1.ipynb  (+1 more)
interpolation_tutorials/: SingleSyntheticBuoyGapFilling.ipynb  SyntheticBuoyGPRCoregion.ipynb
tests/: test_basic.py  test_integration.py  test_xbuoy.py
(+22 files in other folders)
